--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
     --cor-fundo:  #800000 ;
     --cor-principal: #800000 ;
     --cor-secundaria: #f5ecec; 
-    --cor-destaque: #000000;
-    --cor-texto: #FFFFFF;
+    --cor-destaque: #800000;
+    --cor-texto: #000000;
 
 }
 
